argo/services/home-assistant/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: home-assistant-config
    spec:
      containers:
        - name: home-assistant
          image: home-assistant
          ports:
            - name: http
              containerPort: 8123
              protocol: TCP
          volumeMounts:
            - name: home-assistant-config
              mountPath: /config
      volumes:
        - name: home-assistant-config
          persistentVolumeClaim:
            claimName: home-assistant-config
